# bsdiff

./: CMakeLists.txt  README.md  bsdiff.c  bspatch.c
